fix img position mobile

--- a/pages/custom.css
+++ b/pages/custom.css
@@ -1,3 +1,10 @@
 @media (max-width: 767px) {
     .image, .text { clear: both; }
   }
+
+@media (max-width: 767px) {
+    .image { float: none; }
+  }
+@media (min-width: 767px) {
+    .image { float: right; }
+  }
